log
Thu 16 May 2024 03:29:48 PM UTC: 
 tests:  0|5
total_score: 0/70
8886209
Thu 16 May 2024 03:43:09 PM UTC: 
 sudoku.c | 71 ++++++++++++++++++++++++++++++++++++++++++++++++++--------------
 1 file changed, 56 insertions(+), 15 deletions(-)
 tests:  2|4
total_score: 15/70
f007b75
Thu 16 May 2024 03:46:13 PM UTC: 
 sudoku.c | 75 ++++++++++++++++++++++++++++++----------------------------------
 1 file changed, 35 insertions(+), 40 deletions(-)
test.c: In function ‘test_isvalid’:
test.c:112:9: error: too few arguments to function ‘is_valid’
  112 |     if(!is_valid(initial)){
      |         ^~~~~~~~
In file included from test.c:5:
sudoku.c:45:5: note: declared here
   45 | int is_valid(Node* n, int row, int col, int num) {
      |     ^~~~~~~~
test.c:120:8: error: too few arguments to function ‘is_valid’
  120 |     if(is_valid(initial)){
      |        ^~~~~~~~
In file included from test.c:5:
sudoku.c:45:5: note: declared here
   45 | int is_valid(Node* n, int row, int col, int num) {
      |     ^~~~~~~~
test.c:131:8: error: too few arguments to function ‘is_valid’
  131 |     if(is_valid(initial)){
      |        ^~~~~~~~
In file included from test.c:5:
sudoku.c:45:5: note: declared here
   45 | int is_valid(Node* n, int row, int col, int num) {
      |     ^~~~~~~~
test.c:141:8: error: too few arguments to function ‘is_valid’
  141 |     if(is_valid(initial)){
      |        ^~~~~~~~
In file included from test.c:5:
sudoku.c:45:5: note: declared here
   45 | int is_valid(Node* n, int row, int col, int num) {
      |     ^~~~~~~~
test.c: In function ‘test_dfs’:
test.c:213:9: error: too few arguments to function ‘is_valid’
  213 |     if(!is_valid(final)){
      |         ^~~~~~~~
In file included from test.c:5:
sudoku.c:45:5: note: declared here
   45 | int is_valid(Node* n, int row, int col, int num) {
      |     ^~~~~~~~
Compilation failed
7d86fe0
Thu 16 May 2024 03:47:55 PM UTC: 
 sudoku.c | 64 ++++++++++++++++++++++++++++++++++++++++------------------------
 1 file changed, 40 insertions(+), 24 deletions(-)
 tests:  5|3
total_score: 35/70
2916d7e
Thu 16 May 2024 03:48:51 PM UTC: 
 sudoku.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  5|3
total_score: 35/70
975def7
Thu 16 May 2024 04:01:31 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
e6540f3
Sat 18 May 2024 10:27:19 PM UTC: 
 sudoku.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
a0b4c11
Sat 18 May 2024 11:47:40 PM UTC: 
 sudoku.c | 42 ++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 40 insertions(+), 2 deletions(-)
 tests:  10|0
total_score: 70/70
7f42928
Sat 18 May 2024 11:48:10 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:164:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  164 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
71ae5e4
Sat 18 May 2024 11:48:20 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|0
total_score: 70/70
c02340e
